[package]
name = "coconut"
version = "0.1.0"
edition = "2021"
authors = ["Abandon Inc. <tom@abandon.ai>"]
license = "MIT OR Apache-2.0"
description = "🥥 Solana Pump.fun Bot"
readme = "README.md"
homepage = "https://github.com/tunogya/Coconut"
repository = "https://github.com/tunogya/Coconut"
keywords = ["solana", "cli", "pumpfun"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
solana-sdk = { version = "2.1.13", features = ["full"] }
solana-client = "2.1.13"
base58 = "0.2.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
bs58 = "0.5.1"