[package]
name = "coconut"
version = "0.1.0"
edition = "2021"
authors = ["tunogya <tunogya@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "🥥 Solana Pump.fun Bot"
readme = "README.md"
homepage = "https://github.com/tunogya/coconut"
repository = "https://github.com/tunogya/coconut"
keywords = ["solana", "cli", "pumpfun"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
solana-sdk = { version = "2.1.13", features = ["full"] }
solana-client = "2.1.13"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
bs58 = "0.5.1"
tokio = "1.43.0"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = "0.26.1"
url = "2.5.4"
futures-util = "0.3.31"
solana-transaction-status = "2.1.13"
